fix home page h1 style center problem, should be align left

--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,7 @@
     font-size: 32px;
     line-height: 42px;
     margin-bottom: 20px;
+    text-align: left !important;
 }
 
 .introduction p,
